# service-desk-workflow-automation

./: .env.example  .gitignore  CLAUDE.md  Iniciar SDWA.vbs  Iniciar-Validacao-Augusto.cmd  README.md  fazer_login.bat  instalar.bat  main.py  megahub-monitor.spec  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: contexts.toml  routing.toml  teams.toml
installer/: megahub-monitor.iss
scripts/: auto_login.py  check-status.ps1  inspect_pagination.py  install-augusto.ps1  install-monitor.ps1  register-task.ps1  run-background.ps1  run-silent.vbs  run-visible-monitor.ps1  start-tray.vbs
src/megahub_monitor/: _paths.py  cli.py  config.py  config_io.py  config_window.py  errors.py  models.py  setup_wizard.py  tray_app.py
src/megahub_monitor/adapters/catalog/: toml_catalog.py
src/megahub_monitor/adapters/itsm/megahub/: browser_session.py  collector_base.py  collector_fila.py  collector_minha_fila.py  dom_constants.py  reader.py
src/megahub_monitor/adapters/notification/: teams_notifier.py
src/megahub_monitor/adapters/persistence/: migrations.py  sqlite_repository.py
src/megahub_monitor/application/services/: allocation_engine.py  audit_logger.py  load_analyzer.py
src/megahub_monitor/application/use_cases/: check_approval_timeout.py  detect_completion.py  detect_new_tickets.py  detect_status_return.py  notify_assignment.py  notify_completion.py  notify_status_return.py  process_approval.py  run_cycle.py  suggest_allocation.py
src/megahub_monitor/browser/: __init__.py  session.py
src/megahub_monitor/collectors/: __init__.py  base.py  fila.py  minha_fila.py
src/megahub_monitor/domain/: enums.py  errors.py  models.py  value_objects.py
src/megahub_monitor/infrastructure/: clock.py
src/megahub_monitor/notifiers/: __init__.py  teams_workflow.py
src/megahub_monitor/ports/: approval_gateway.py  itsm_reader.py  itsm_writer.py  notifier.py  state_repository.py  team_catalog.py
src/megahub_monitor/repository/: __init__.py  sqlite_repository.py
src/megahub_monitor/services/: __init__.py  detector.py  load_analyzer.py  monitor.py  router.py  run_once.py
tests/: conftest.py
tests/fakes/: fake_approval_gateway.py  fake_itsm_reader.py  fake_notifier.py  fake_state_repository.py  fake_team_catalog.py
tests/integration/: test_sqlite_repository.py
tests/unit/: test_cli_commands.py
tests/unit/adapters/: test_teams_config.py  test_toml_catalog.py
tests/unit/application/: test_allocation_engine.py  test_detect_completion.py  test_detect_new_tickets.py  test_detect_status_return.py  test_edge_cases.py  test_load_analyzer.py  test_notify_assignment.py  test_notify_completion.py  test_notify_status_return.py  test_process_approval.py  test_suggest_allocation.py
tests/unit/domain/: test_backward_compat.py  test_enums.py  test_models.py  test_value_objects.py
tests/unit/use_cases/: test_check_approval_timeout.py  test_run_cycle.py
