[project]
name = "megahub-monitor"
version = "0.2.0"
description = "Service Desk Workflow Automation (SDWA)"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.45",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring real MegaHub access (deselect with '-m \"not e2e\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
