[project]
name = "megahub-monitor"
version = "0.2.0"
description = "Service Desk Workflow Automation (SDWA)"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.45",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "pystray>=0.19",
    "Pillow>=10.0",
]

[project.gui-scripts]
megahub-monitor = "megahub_monitor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.4",
    "mypy>=1.10",
]
build = [
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring real MegaHub access (deselect with '-m \"not e2e\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
"src/megahub_monitor/adapters/persistence/sqlite_repository.py" = ["E501"]
"tests/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "megahub_monitor.application.*"
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src/megahub_monitor"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    # Infrastructure adapters — require real browser (Playwright) or network (HTTP)
    "src/megahub_monitor/adapters/itsm/*",
    "src/megahub_monitor/adapters/notification/*",
    # Legacy shim modules (re-exports only, kept for backward compat)
    "src/megahub_monitor/notifiers/*",
    "src/megahub_monitor/repository/*",
    # Legacy service layer (orchestration, not unit-testable without full stack)
    "src/megahub_monitor/services/*",
    # Orchestration use case — wires all use cases together, tested via integration
    "src/megahub_monitor/application/use_cases/run_cycle.py",
    # Abstract port stubs — no executable logic to cover
    "src/megahub_monitor/ports/approval_gateway.py",
    "src/megahub_monitor/ports/itsm_reader.py",
    "src/megahub_monitor/ports/itsm_writer.py",
    # Runtime-only modules (logging, CLI entrypoint, GUI tray)
    "src/megahub_monitor/logging_setup.py",
    "src/megahub_monitor/cli.py",
    # GUI modules — require display/pystray/tkinter, not testable in headless CI
    "src/megahub_monitor/tray_app.py",
    "src/megahub_monitor/config_window.py",
    "src/megahub_monitor/setup_wizard.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
